--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,17 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../laravel-nova"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/nova": "^2.0@dev",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
